--- a/aula6/index.html
+++ b/aula6/index.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Model</title>
+    <title>Imagens</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Box Model</h1>
-    <div class="dv-1">
-        <img src="img-flor-floresta-no-caminho.jpg" alt="Um caminho na floresta">
-        <p>Lorem ipsum dolor sit amet.</p>
+    <h1>Imagens</h1>
+    <div class="container">
+        <img src="img/waterf.jpg" alt="Vista por tras de uma cachoeira com um por do sol">
+        <img src="img/img-flor-floresta-no-caminho.jpg" alt="Um caminho em uma floresta">
     </div>
-    <div class="dv-2">
-        <p>Lorem ipsum dolor sit amet.</p>
-    </div>
-    <div class="dv-3">lorem</div>
 </body>
 </html>
