--- a/aula6/index.html
+++ b/aula6/index.html
@@ -6,12 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagens</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
     <h1>Imagens</h1>
     <div class="container">
         <img src="img/waterf.jpg" alt="Vista por tras de uma cachoeira com um por do sol">
         <img src="img/img-flor-floresta-no-caminho.jpg" alt="Um caminho em uma floresta">
+        <img src="https://source.unsplash.com/800x600/?computer" alt="Imagem
+com natureza e água">
+        <img src="https://source.unsplash.com/800x600/?batman" alt="Imagem do Batman">
+        <img src="https://source.unsplash.com/800x600/?jdm" alt="carros">
     </div>
+    
 </body>
 </html>
