--- a/aula6-1/index.html
+++ b/aula6-1/index.html
@@ -15,12 +15,16 @@
             <img src="https://source.unsplash.com/800x600/?nature,water" alt="Imagem
 com natureza e água">
         </div>
+        <div class="box">
+            <img src="https://source.unsplash.com/YbgPWfWlvkE" alt="">
+        </div>
     </div>
 </body>
 </html>
 <!-- 
-    https://unsplash.com/photos/ln5drpv_ImI
+    https://unsplash.com/photos/ln5drpv_ImI 
     https://unsplash.com/photos/Oze6U2m1oYU
     https://unsplash.com/photos/Q1p7bh3SHj8
     https://unsplash.com/photos/01_igFr7hd4
+    https://unsplash.com/photos/YbgPWfWlvkE
  -->
