--- a/aula6-1/index.html
+++ b/aula6-1/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav>
+        <a href="https://www.uninove.br">Uninove</a>
+    </nav>
     <div class="container">
         <div class="box">
             <img src="./img/universe.jpg" alt="Imagem sobre o Universo">
