--- a/aula6-1/index.html
+++ b/aula6-1/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <nav>
-        <a href="https://www.uninove.br">Uninove</a>
+        <a href="https://www.uninove.br" target="_blank">Uninove</a>
+        <a href="https://unsplash.com/photos/ln5drpv_ImI" target="_blank">Imagem🎨</a>
+        <a href="">Home</a>
+        <a href="">Produto</a>
+        <a href="">Sobre</a>
     </nav>
     <div class="container">
         <div class="box">
@@ -23,6 +27,14 @@ com natureza e água">
             <img src="https://source.unsplash.com/YbgPWfWlvkE" alt="">
         </div>
     </div>
+    <section class="sec">
+        <h2>Produto</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit repellendus accusamus libero, necessitatibus natus quia!</p>
+    </section>
+    <section class="sec">
+        <h2>Sobre</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit repellendus accusamus libero, necessitatibus natus quia!</p>
+    </section>
 </body>
 </html>
 <!-- 
