--- a/aula7/index_lista1.html
+++ b/aula7/index_lista1.html
@@ -19,5 +19,42 @@
         <li>Item 3</li>
         <li>Item 4</li>
     </ol>
+    <h2>Lista de Mercado</h2>
+    <ul>
+        <li>TV</li>
+        <li>Pão</li>
+        <li>Leite</li>
+        <li>Pipoca</li>
+        <li>Refri</li>
+    </ul>
+    <h2>Cardápio</h2>
+    <!-- [windows][.] insere emojis -->
+    <ol>
+        <li>🍕Pizza</li>
+        <ul>
+            <li>Atum</li>
+            <li>3 Queijos</li>
+            <li>Portuguesa</li>
+            <li>Catufrango</li>
+        </ul>
+        <li>🍔Lanche</li>
+        <li>🥤Bebida</li>
+    </ol>
+    <!-- 
+       1 Pizza
+           * Atum
+           * 3 Queijos
+           * Portuguesa
+           * Catufrango
+       2 Lanche
+            Misto Quente
+            Americano
+            X Tudo
+            X-Bacon
+       3 Bebida
+            Água
+            Refri
+            Suco
+     -->
 </body>
 </html>
