--- a/aula7/index_lista1.html
+++ b/aula7/index_lista1.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listas</title>
+    <!-- link[tab] ou link:css[tab] -->
+    <link rel="stylesheet" href="style_lista.css">
 </head>
 <body>
     <h1>Listas</h1>
@@ -29,7 +31,7 @@
     </ul>
     <h2>Cardápio</h2>
     <!-- [windows][.] insere emojis -->
-    <ol>
+    <ol class="cardapio">
         <li>🍕Pizza</li>
         <ul>
             <li>Atum</li>
@@ -38,7 +40,26 @@
             <li>Catufrango</li>
         </ul>
         <li>🍔Lanche</li>
+        <ul>
+            <li>Misto Quente</li>
+            <li>Americano</li>
+            <li>X-Tudo</li>
+            <li>X-Bacon</li>
+        </ul>
         <li>🥤Bebida</li>
+        <ul>
+            <li>Água</li>
+            <ul>
+                <li>Com Gás</li>
+                <li>Sem Gás</li>
+            </ul>
+            <li>Refri</li>
+            <ul>
+                <li>Coca-Cola</li>
+                <li>Fanta</li>
+            </ul>
+            <li>Suco</li>
+        </ul>
     </ol>
     <!-- 
        1 Pizza
