--- a/aula7/index_lista1.html
+++ b/aula7/index_lista1.html
@@ -80,7 +80,7 @@
      <h2>Aula de Hoje</h2>
      <details>
         <summary>Lista Ordenada</summary>
-        <p>Lista ordenada mosta os itens dentro de uma sequencia</p>
+        <p>Lista ordenada mostra os itens dentro de uma sequencia</p>
      </details>
      <details>
         <summary>Lista Não Ordenada</summary>
