--- a/aula7/index.html
+++ b/aula7/index.html
@@ -18,5 +18,16 @@
             </ul>
         </nav>
     </header>
+    <div class="container">
+        <div class="d">
+            <p>Um texto</p>
+        </div>
+        <div class="d">
+            <p>Outro texto</p>
+        </div>
+        <div class="d">
+            <p>Último texto</p>
+        </div>
+    </div>
 </body>
 </html>
