--- a/aula7/index.html
+++ b/aula7/index.html
@@ -19,13 +19,13 @@
         </nav>
     </header>
     <div class="container">
-        <div class="d">
+        <div class="d d1">
             <p>Um texto</p>
         </div>
-        <div class="d">
+        <div class="d d2">
             <p>Outro texto</p>
         </div>
-        <div class="d">
+        <div class="d d3">
             <p>Último texto</p>
         </div>
     </div>
