--- a/aula8/index.html
+++ b/aula8/index.html
@@ -9,11 +9,15 @@
 <body>
     <h1>Form</h1>
     <form name="form1" method="post" action="http://hebertphp.awardspace.us/recebe.php" autocomplete="off">
-       <label for="login">Login</label> <input type="text" name="login" id="login" required placeholder="Digite o seu login" value="" autofocus><span>*</span><br>
-       <label for="senha">Senha</label>  <input type="password" name="senha" id="senha" required placeholder="Digite a sua senha"><span>*</span><br>
-       <!-- Criar um campo para digitar o RA -->
-       <label for="ra">RA</label> <input type="number" name="ra" id="ra" required placeholder="Digite o seu RA"><span>*</span><br>
-       <input type="hidden" name="local" value="São Paulo"> 
+        <fieldset>
+            <legend>Cadastro</legend>
+            <label for="login">Login</label> <input type="text" name="login" id="login" required placeholder="Digite o seu login" value="" autofocus><span>*</span><br>
+            <label for="senha">Senha</label>  <input type="password" name="senha" id="senha" required placeholder="Digite a sua senha"><span>*</span><br>
+            <!-- Criar um campo para digitar o RA -->
+            <label for="ra">RA</label> <input type="number" name="ra" id="ra" required placeholder="Digite o seu RA"><span>*</span><br>
+            <input type="hidden" name="local" value="São Paulo"> 
+        </fieldset>
+       
        <input type="submit" value="Validar"> <input type="reset" value="Limpar">
         <p>* Campo obrigatório</p>
         
