--- a/aula8/index.html
+++ b/aula8/index.html
@@ -17,7 +17,12 @@
             <label for="ra">RA</label> <input type="number" name="ra" id="ra" required placeholder="Digite o seu RA"><span>*</span><br>
             <input type="hidden" name="local" value="São Paulo"> 
         </fieldset>
-       
+       <fieldset>
+            <legend>Lista de Compra</legend> 
+            <input type="checkbox" name="arroz" id="arroz"> <label for="arroz">Arroz</label> <br>
+            <input type="checkbox" name="" id=""> Feijão<br>
+            <input type="checkbox" name="" id=""> Nutella<br>
+       </fieldset>
        <input type="submit" value="Validar"> <input type="reset" value="Limpar">
         <p>* Campo obrigatório</p>
         
