--- a/aula8/index.html
+++ b/aula8/index.html
@@ -23,6 +23,13 @@
             <input type="checkbox" name="" id=""> Feijão<br>
             <input type="checkbox" name="" id=""> Nutella<br>
        </fieldset>
+       <fieldset>
+            <legend>Qual a disciplina de sexta-feira?</legend> 
+            <input type="radio" name="" id=""> Arquitetura <br>
+            <input type="radio" name="" id=""> Front-End <br>
+            <input type="radio" name="" id=""> Desenvolvimento para Internet<br>
+            <input type="radio" name="" id=""> Internet das coisas<br>
+       </fieldset>
        <input type="submit" value="Validar"> <input type="reset" value="Limpar">
         <p>* Campo obrigatório</p>
         
