--- a/aula8/index.html
+++ b/aula8/index.html
@@ -20,8 +20,8 @@
        <fieldset>
             <legend>Lista de Compra</legend> 
             <input type="checkbox" name="arroz" id="arroz"> <label for="arroz">Arroz</label> <br>
-            <input type="checkbox" name="" id=""> Feijão<br>
-            <input type="checkbox" name="" id=""> Nutella<br>
+            <input type="checkbox" name="feijao" id="feijao"> <label for="feijao">Feijão</label> <br>
+            <input type="checkbox" name="nutella" id="nutella"> <label for="nutella">Nutella</label> <br>
        </fieldset>
        <fieldset>
             <legend>Qual a disciplina de sexta-feira?</legend> 
