--- a/aula8/index.html
+++ b/aula8/index.html
@@ -20,15 +20,15 @@
        <fieldset>
             <legend>Lista de Compra</legend> 
             <input type="checkbox" name="arroz" id="arroz"> <label for="arroz">Arroz</label> <br>
-            <input type="checkbox" name="feijao" id="feijao"> <label for="feijao">Feijão</label> <br>
+            <input type="checkbox" name="feijao" id="feijao" checked> <label for="feijao">Feijão</label> <br>
             <input type="checkbox" name="nutella" id="nutella"> <label for="nutella">Nutella</label> <br>
        </fieldset>
        <fieldset>
             <legend>Qual a disciplina de sexta-feira?</legend> 
-            <input type="radio" name="" id=""> Arquitetura <br>
-            <input type="radio" name="" id=""> Front-End <br>
-            <input type="radio" name="" id=""> Desenvolvimento para Internet<br>
-            <input type="radio" name="" id=""> Internet das coisas<br>
+            <input type="radio" name="disciplina" id="arq" value="Arquitetura"> Arquitetura <br>
+            <input type="radio" name="disciplina" id="pfe" value="Front-End"> Front-End <br>
+            <input type="radio" name="disciplina" id="dpi" value="Desenvolvimento para Internet"> Desenvolvimento para Internet<br>
+            <input type="radio" name="disciplina" id="idc" value="Internet das coisas"> Internet das coisas<br>
        </fieldset>
        <input type="submit" value="Validar"> <input type="reset" value="Limpar">
         <p>* Campo obrigatório</p>
