--- a/aula8/index.html
+++ b/aula8/index.html
@@ -30,6 +30,15 @@
             <input type="radio" name="disciplina" id="dpi" value="Desenvolvimento para Internet"> Desenvolvimento para Internet<br>
             <input type="radio" name="disciplina" id="idc" value="Internet das coisas"> Internet das coisas<br>
        </fieldset>
+       <fieldset>
+            <legend>UF</legend> 
+            Selecione o UF
+            <select name="uf">
+                <option value="SP">SP</option>
+                <option value="RJ">RJ</option>
+                <option value="MG">MG</option>
+            </select>
+       </fieldset>
        <input type="submit" value="Validar"> <input type="reset" value="Limpar">
         <p>* Campo obrigatório</p>
         
