--- a/aula91/index.html
+++ b/aula91/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style_animation.css">
 </head>
 <body>
-    <h1>Animation - CSS</h1>
+    <h1>Animation - CSS 😎</h1>
     <div class="move"></div>
 </body>
 </html>
